Сделал выезжающее окно header

--- a/watch group/index.html
+++ b/watch group/index.html
@@ -22,12 +22,12 @@
 <header class="header">
     <div class="container">
         <div class="row main-header">
-            <div class="col-2">
+            <div class="col-3 open-mobile-menu-btn-continer">
                 <div class="open-mobile-menu-btn">
                     <i class="fas fa-bars"></i>
                 </div>
             </div>
-            <div class="col-lg-3 col-8 p-0">
+            <div class="col-lg-3 col-6 p-0">
                 <div class="logo">
                     <a href="https://watch-group.com/ru/" title="Watch Group - Крупнейший интернет-магазин часов, ремешков, браслетов и других комплектующих для часов" rel="home"> Watch Group</a>
                 </div>
@@ -42,7 +42,7 @@
                     </button>
                 </form>
             </div>
-            <div class="col-lg-7 col-2 col-xl-6">
+            <div class="col-lg-7 col-3 col-xl-6">
                 <ul class="main-header-nav d-flex justify-content-between">
                     <li class="main-header-nav__item right-border header-mail">
                         <a href="mailto:support@watch-group.com" title="support@watch-group.com" class="main-header-nav__item__mail">
@@ -87,57 +87,58 @@
                             </ul>
 
                     </li>
-                    <li class="main-header-nav__item header-shopping-cart">
+                    <li class="main-header-nav__item header-shopping-cart ml-auto ml-lg-0">
                         <a href="https://watch-group.com/ru/cart/" class="header-shopping-cart__text" title="Корзина">
                             <span class="header-shopping-cart__price">
                                 ₽ 7,9800.00
                             </span>
                             <i class="fas fa-shopping-cart header-shopping-cart__icon" data-icon-label="2"></i>
                         </a>
+                        <div class="shopping-cart-dropdown-container">
+                            <div class="shopping-cart-dropdown">
+                                <ul class="shopping-cart-list">
+                                    <li class="shopping-cart-list-item">
+                                        <a href="#" class="shopping-cart-list__product-description">
+                                            <img src="img/g-shock-10506611-10506611-11582970-247x296.jpg" alt="" class="shopping-cart-list__image">
+                                            Ремень для часов G-Shock 10506611
+                                        </a>
 
-                        <div class="shopping-cart-dropdown">
-                            <ul class="shopping-cart-list">
-                                <li class="shopping-cart-list-item">
-                                    <a href="#" class="shopping-cart-list__product-description">
-                                        <img src="img/g-shock-10506611-10506611-11582970-247x296.jpg" alt="" class="shopping-cart-list__image">
-                                        Ремень для часов G-Shock 10506611
-                                    </a>
+                                        <div class="shopping-cart-list-item__amount-and-price">
+                                            <span style="font-size: .85em;opacity: .6;">1 ×</span>
+                                            <span style="font-size: 0.85em;font-weight: 700;">₽4,290.00</span>
+                                        </div>
+                                        <a href="#" class="shopping-cart-list-item__close-btn" aria-label="Удалить эту позицию">
+                                            ×
+                                        </a>
 
-                                    <div class="shopping-cart-list-item__amount-and-price">
-                                        <span style="font-size: .85em;opacity: .6;">1 ×</span>
-                                        <span style="font-size: 0.85em;font-weight: 700;">₽4,290.00</span>
-                                    </div>
-                                    <a href="#" class="shopping-cart-list-item__close-btn" aria-label="Удалить эту позицию">
-                                        ×
-                                    </a>
+                                    </li>
 
-                                </li>
-
-                                <li class="shopping-cart-list-item">
-                                    <a href="#" class="shopping-cart-list__product-description">
-                                        <img src="img/marc-by-marc-jacobs-mbm1184-marci-medium-ambm1184-8207608-247x296.jpg" alt="" class="shopping-cart-list__image">
+                                    <li class="shopping-cart-list-item">
+                                        <a href="#" class="shopping-cart-list__product-description">
+                                            <img src="img/marc-by-marc-jacobs-mbm1184-marci-medium-ambm1184-8207608-247x296.jpg" alt="" class="shopping-cart-list__image">
                                             Ремень для часов Marc Jacobs AMBM1184 18.0 мм
-                                    </a>
-                                    <div class="shopping-cart-list-item__amount-and-price">
-                                        <span style="font-size: .85em;opacity: .6;">1 ×</span>
-                                        <span style="font-size: 0.85em;font-weight: 700;">₽3,690.00</span>
-                                    </div>
+                                        </a>
+                                        <div class="shopping-cart-list-item__amount-and-price">
+                                            <span style="font-size: .85em;opacity: .6;">1 ×</span>
+                                            <span style="font-size: 0.85em;font-weight: 700;">₽3,690.00</span>
+                                        </div>
 
 
-                                    <a href="#" class="shopping-cart-list-item__close-btn" aria-label="Удалить эту позицию">
-                                        ×
-                                    </a>
-                                </li>
-                            </ul>
-                            <p class="shopping-cart-dropdown-sum">
-                                <strong>Подытог:</strong> <span class="result">₽7,980.00</span>
-                            </p>
-                            <a href="https://watch-group.com/ru/cart/" class="shopping-cart-dropdown_show-cart">
-                                Просмотр корзины
-                            </a>
-                            <a href="https://watch-group.com/ru/checkout/" class="shopping-cart-dropdown_order">
-                                Оформление заказа
-                            </a>
+                                        <a href="#" class="shopping-cart-list-item__close-btn" aria-label="Удалить эту позицию">
+                                            ×
+                                        </a>
+                                    </li>
+                                </ul>
+                                <p class="shopping-cart-dropdown-sum">
+                                    <strong>Подытог:</strong> <span class="result">₽7,980.00</span>
+                                </p>
+                                <a href="https://watch-group.com/ru/cart/" class="shopping-cart-dropdown_show-cart">
+                                    Просмотр корзины
+                                </a>
+                                <a href="https://watch-group.com/ru/checkout/" class="shopping-cart-dropdown_order">
+                                    Оформление заказа
+                                </a>
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -231,7 +232,7 @@
     <section class="main-page-content">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center p-5">
+                <div class="col-12 text-center py-5">
                     <a href="#" class="main-find-button">
                         Найти ремешок
                         <i class="fas fa-search"></i>
