Сделал выезжающее окно header

--- a/watch group/index.html
+++ b/watch group/index.html
@@ -94,8 +94,11 @@
                             </span>
                             <i class="fas fa-shopping-cart header-shopping-cart__icon" data-icon-label="2"></i>
                         </a>
+
                         <div class="shopping-cart-dropdown-container">
+                            <i class="fas fa-times fa-2x shopping-cart-dropdown__close-btn"></i>
                             <div class="shopping-cart-dropdown">
+                                <h3 class="shopping-cart-dropdown__mobile-label">КОРЗИНА</h3>
                                 <ul class="shopping-cart-list">
                                     <li class="shopping-cart-list-item">
                                         <a href="#" class="shopping-cart-list__product-description">
