Закончены 2 страницы watch group

--- a/watch group/object card.html
+++ b/watch group/object card.html
@@ -98,7 +98,7 @@
                         <div class="shopping-cart-dropdown-container">
                             <i class="fas fa-times fa-2x shopping-cart-dropdown__close-btn"></i>
 
-                            <div class="shopping-cart-dropdown" style="cursor: initial;">
+                            <div class="shopping-cart-dropdown" style="cursor: initial;margin-right: 10px;">
                                 <h3 class="shopping-cart-dropdown__mobile-label">КОРЗИНА</h3>
                                 <!-- Использовать при пустой корзине
 
