Закончены 2 страницы watch group

--- a/watch group/object card.html
+++ b/watch group/object card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Главная - Watch Group</title>
+    <title>Купить Ремень для часов Swatch AYVB401 Garosugil</title>
     <link rel="icon" href="img/cropped-Test2-32x32.png" sizes="32x32">
     <link rel="icon" href="img/cropped-Test2-192x192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="img/cropped-Test2-180x180.png">
@@ -98,7 +98,7 @@
                         <div class="shopping-cart-dropdown-container">
                             <i class="fas fa-times fa-2x shopping-cart-dropdown__close-btn"></i>
 
-                            <div class="shopping-cart-dropdown" style="cursor: initial;margin-right: 10px;">
+                            <div class="shopping-cart-dropdown" style="cursor: initial;">
                                 <h3 class="shopping-cart-dropdown__mobile-label">КОРЗИНА</h3>
                                 <!-- Использовать при пустой корзине
 
