Сделаны section до resources в 'planning app'

--- a/planning app/index.html
+++ b/planning app/index.html
@@ -62,7 +62,7 @@
 
                 </a>
             </div>
-            <a href="#" class="header__support-buttons__get-started">
+            <a href="#" class="standard-button">
                 Get started
             </a>
         </div>
@@ -157,20 +157,114 @@
         <p>Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren
             similique est cu. Et vel modus congue vituperata. Solum patrioque no sea. Mea ex malis mollis oporteat. Eum
             an expetenda consequat.</p>
+
         <div class="plan-and-manage__buttons-block">
-            <a href="#">
+            <a href="#" class="video-link">
                 View video
                 <svg width="7" height="8" viewBox="0 0 7 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M6 2.73354C6.66667 3.11844 6.66667 4.08069 6 4.46559L1.5 7.06367C0.833333 7.44857 0 6.96744 0 6.19764V1.00149C0 0.231691 0.833333 -0.249434 1.5 0.135467L6 2.73354Z" fill="#4C85FF"/>
+                    <path d="M6 2.73354C6.66667 3.11844 6.66667 4.08069 6 4.46559L1.5 7.06367C0.833333 7.44857 0 6.96744 0 6.19764V1.00149C0 0.231691 0.833333 -0.249434 1.5 0.135467L6 2.73354Z" fill="white"/>
                 </svg>
-
             </a>
-            <a href="#">
+
+            <a href="#" class="features-link">
                 See features
             </a>
         </div>
     </div>
     <img src="img/phone-desctop-illustration.svg" alt="">
+</section>
+
+<section class="about-us">
+    <h5>ABOUT US</h5>
+    <h4>Read about our app</h4>
+    <div class="about-us__cards-container">
+        <div class="about-us__cards-container__card">
+            <img src="img/overview%20icon.svg" alt="Overview icon">
+            <p class="about-us__cards-container__card__header">Overview</p>
+            <p class="about-us__cards-container__card__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum
+                pro.</p>
+        </div>
+        <div class="about-us__cards-container__separator">
+            <span></span>
+        </div>
+        <div class="about-us__cards-container__card">
+            <img src="img/files%20icon.svg" alt="Files icon">
+            <p class="about-us__cards-container__card__header">Files</p>
+            <p class="about-us__cards-container__card__text">No vim nulla vitae intellegat. Ei enim error ius, solet
+                atomorum conceptam ex has.</p>
+        </div>
+        <div class="about-us__cards-container__separator">
+            <span></span>
+        </div>
+        <div class="about-us__cards-container__card">
+            <img src="img/Meeting%20chats.svg" alt="Meeting chats icon">
+            <p class="about-us__cards-container__card__header">Meeting chats</p>
+            <p class="about-us__cards-container__card__text">Vim ne tacimates neglegentur. Erat diceret omittam at
+                est.</p>
+        </div>
+        <div class="about-us__cards-container__separator">
+            <span></span>
+        </div>
+        <div class="about-us__cards-container__card">
+            <img src="img/Save%20events.svg" alt="Save events icon">
+            <p class="about-us__cards-container__card__header">Save events</p>
+            <p class="about-us__cards-container__card__text">Nisl idque mel ea, nominati voluptatum.</p>
+        </div>
+    </div>
+    <div class="about-us__read-more-buttons">
+        <a href="#" class="about-us__read-more-buttons__read-more standard-button">Read more</a>
+        <div class="about-us__read-more-buttons__separator"></div>
+        <p class="about-us__read-more-buttons__or">OR</p>
+        <div class="about-us__read-more-buttons__separator"></div>
+        <a href="#" class="standard-button">Get started</a>
+    </div>
+</section>
+
+<section class="statistics">
+    <div class="statistics__measurement-container">
+        <img src="img/measurement.svg" alt="">
+        <h2>89%</h2>
+        <span class="statistics__measurement-container__text">Customers who have <br> increased their productivity</span>
+    </div>
+    <div class="statistics__user-amount-container">
+        <img src="img/people%20group.svg" alt="">
+        <h2>3123</h2>
+        <span class="statistics__user-amount-container__text">Users who have used our <br> application</span></div>
+</section>
+
+<section class="resources">
+    <h5>OUR RESOURCES</h5>
+    <h4>Start reading our blog</h4>
+    <div class="owl-carousel owl-theme" id="resources__carousel">
+        <div class="item">
+            <div class="resources__carousel__content">
+                <div class="resources__carousel__content__image-collection">
+                    <div class="big-photo">
+                        <div class="image-with-search-icon">
+                            <img src="img/photo-1.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </div>
+                    </div>
+                    <div class="photo-column">
+                        <div class="image-with-search-icon" style="padding-bottom: 7px;">
+                            <img src="img/photo-2.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </div>
+                        <div class="image-with-search-icon" style="padding-top: 7px;">
+                            <img src="img/photo-3.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+
+        </div>
+        <div class="item">
+
+        </div>
+    </div>
 </section>
 
 <script src="js/jquery-3.5.1.min.js"></script>
