--- a/planning app/index.html
+++ b/planning app/index.html
@@ -5,9 +5,46 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Plan your life</title>
 </head>
 <body>
+<div class="only-desktop-stub">
+
+    <style>
+        .only-desktop-stub__main-text {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background: #fff;
+            z-index: 99999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            display: none;
+        }
+        .only-desktop-stub__main-text p {
+            text-align: center;
+        }
+        @media screen and (max-width: 992px) {
+            .only-desktop-stub__main-text {
+                display: flex !important;
+            }
+        }
+    </style>
+    <div class="only-desktop-stub__main-text">
+        <span style="font-size: 48px;"><span style="color: red;text-shadow: 0px 0px 2px rgba(255, 0, 0, 1)">U</span>pps...</span>
+        <p>This page hasn't mobile version <br>
+            You can go to <a href="/" style="text-decoration: underline;color: blue;">main page</a> or you can turn the phone on its side.</p>
+        <br>
+        <p>У этой страницы нет мобильной версии <br>
+            Вы можете пойти на <a href="/" style="text-decoration: underline;color: blue;">главную страницу</a> или перевернуть телефон на бок.
+        </p>
+
+    </div>
+</div>
 
 <header>
     <div class="header">
