--- a/заглушка для страниц без мобильной версий.html
+++ b/заглушка для страниц без мобильной версий.html
@@ -2,7 +2,7 @@
 
     <style>
         .only-desktop-stub__main-text {
-            position: absolute;
+            position: fixed;
             width: 100%;
             height: 100%;
             background: #fff;
