--- a/planning app/index.html
+++ b/planning app/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 <div class="only-desktop-stub">
-
     <style>
         .only-desktop-stub__main-text {
             position: fixed;
@@ -42,7 +41,10 @@
         <p>У этой страницы нет мобильной версии <br>
             Вы можете пойти на <a href="/" style="text-decoration: underline;color: blue;">главную страницу</a> или перевернуть телефон на бок.
         </p>
-
+        <p style="font-size: 10px;position: absolute;bottom: 10px;">
+            If you are on the Internet from a computer, then try reducing the page ("ctrl" + "-") <br>
+            Если вы с компьютера, то попробуйте уменьшить страницу ("ctrl" + "-")
+        </p>
     </div>
 </div>
 
