--- a/заглушка для страниц без мобильной версий.html
+++ b/заглушка для страниц без мобильной версий.html
@@ -30,6 +30,9 @@
         <p>У этой страницы нет мобильной версии <br>
             Вы можете пойти на <a href="/" style="text-decoration: underline;color: blue;">главную страницу</a> или перевернуть телефон на бок.
         </p>
-
+        <p style="font-size: 10px;position: absolute;bottom: 10px;">
+            If you are on the Internet from a computer, then try reducing the page ("ctrl" + "-") <br>
+            Если вы с компьютера, то попробуйте уменьшить страницу ("ctrl" + "-")
+        </p>
     </div>
 </div>
