planning app: TESTIMONIALS

--- a/planning app/index.html
+++ b/planning app/index.html
@@ -10,6 +10,7 @@
     <title>Plan your life</title>
 </head>
 <body>
+
 <div class="only-desktop-stub">
     <style>
         .only-desktop-stub__main-text {
@@ -276,33 +277,167 @@
     <h4>Start reading our blog</h4>
     <div class="owl-carousel owl-theme" id="resources__carousel">
         <div class="item">
+
             <div class="resources__carousel__content">
                 <div class="resources__carousel__content__image-collection">
                     <div class="big-photo">
-                        <div class="image-with-search-icon">
+                        <a class="image-with-search-icon" href="#">
                             <img src="img/photo-1.png" alt="search">
                             <img class="search-icon" src="img/search%20icon.svg" alt="search">
-                        </div>
+                        </a>
                     </div>
                     <div class="photo-column">
-                        <div class="image-with-search-icon" style="padding-bottom: 7px;">
+                        <a href="#" class="image-with-search-icon" style="margin-bottom: 7px;">
                             <img src="img/photo-2.png" alt="search">
                             <img class="search-icon" src="img/search%20icon.svg" alt="search">
-                        </div>
-                        <div class="image-with-search-icon" style="padding-top: 7px;">
+                        </a>
+                        <a href="#" class="image-with-search-icon" style="margin-top: 7px;">
                             <img src="img/photo-3.png" alt="search">
                             <img class="search-icon" src="img/search%20icon.svg" alt="search">
-                        </div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="resources__carousel__content__text-content">
+                    <h3><span class="light">How to start planning</span></h3>
+                    <span class="resources__carousel__content__text-content__main-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti
+                        periculis vis ei, quas tibique pro at, eos ut decore ...</span>
+                    <div class="resources__carousel__content__text-content__support-buttons">
+                        <a href="#" class="resources__carousel__content__text-content__support-buttons__read-button standard-button">Read now</a>
+                        <a href="#" class="resources__carousel__content__text-content__support-buttons__add">Add to your bookmarks</a>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item">
 
         </div>
         <div class="item">
 
+            <div class="resources__carousel__content">
+                <div class="resources__carousel__content__image-collection">
+                    <div class="big-photo">
+                        <a class="image-with-search-icon" href="#">
+                            <img src="img/photo-1.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </a>
+                    </div>
+                    <div class="photo-column">
+                        <a href="#" class="image-with-search-icon" style="margin-bottom: 7px;">
+                            <img src="img/photo-2.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </a>
+                        <a href="#" class="image-with-search-icon" style="margin-top: 7px;">
+                            <img src="img/photo-3.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="resources__carousel__content__text-content">
+                    <h3><span class="light">How to start planning</span></h3>
+                    <span class="resources__carousel__content__text-content__main-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti
+                        periculis vis ei, quas tibique pro at, eos ut decore ...</span>
+                    <div class="resources__carousel__content__text-content__support-buttons">
+                        <a href="#" class="resources__carousel__content__text-content__support-buttons__read-button standard-button">Read now</a>
+                        <a href="#" class="resources__carousel__content__text-content__support-buttons__add">Add to your bookmarks</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
+        <div class="item">
+
+            <div class="resources__carousel__content">
+                <div class="resources__carousel__content__image-collection">
+                    <div class="big-photo">
+                        <a class="image-with-search-icon" href="#">
+                            <img src="img/photo-1.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </a>
+                    </div>
+                    <div class="photo-column">
+                        <a href="#" class="image-with-search-icon" style="margin-bottom: 7px;">
+                            <img src="img/photo-2.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </a>
+                        <a href="#" class="image-with-search-icon" style="margin-top: 7px;">
+                            <img src="img/photo-3.png" alt="search">
+                            <img class="search-icon" src="img/search%20icon.svg" alt="search">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="resources__carousel__content__text-content">
+                    <h3><span class="light">How to start planning</span></h3>
+                    <span class="resources__carousel__content__text-content__main-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti
+                        periculis vis ei, quas tibique pro at, eos ut decore ...</span>
+                    <div class="resources__carousel__content__text-content__support-buttons">
+                        <a href="#" class="resources__carousel__content__text-content__support-buttons__read-button standard-button">Read now</a>
+                        <a href="#" class="resources__carousel__content__text-content__support-buttons__add">Add to your bookmarks</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</section>
+
+<section class="testimonials">
+    <div class="testimonials__main-text">
+        <h5>TESTIMONIALS</h5>
+        <h3>Customers's quotes</h3>
+        <span class="testimonials__main-text__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an.</span>
+    </div>
+    <div class="owl-carousel owl-theme" id="testimonials__carousel">
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+            <img src="img/avatar-image.svg" alt="">
+        </div>
+
     </div>
 </section>
 
